@@ -1,3 +1,10 @@
+2009-12-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-insert-directory): Quote "'" in the
+	switches.
+	(tramp-open-connection-setup-interactive-shell): Dump stty
+	settings.  Enable "neveropen" arg for all `tramp-send-command' calls.
+
 2009-12-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-file-name-all-completions): Backward/
